Added footer to profile page

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -58,9 +58,9 @@
 
 	<div *ngIf="!checkApp" >
 		<div style="flex-wrap: inherit; width: 100%;padding:0" class="cover2" >
-			<div class="welcome">
-				<h2 class="title contact"> <span  style="color: #ffffff !important;font-size:4vw !important;margin-top: 20vw;">Contact Us</span></h2>
-			</div>
+			<!-- <div class="welcome"> -->
+				<p class="title" style="color: #ffffff !important;font-size:4vw !important;padding-top:100px !important;"> Contact Us</p>
+			<!-- </div> -->
 		</div>
 		
 		<div class="first-section" style="padding-top: 0px !important">
@@ -145,7 +145,7 @@
 					<div class="container contactUs" style="text-align: left">
 						<h2 class="headFont;" style="margin-bottom: 0px;">RESTAURANT</h2>
 						<br>
-						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Opening Hours: 8:00 - 23:30</p>
+						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
 						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
 
 					</div>
@@ -165,21 +165,30 @@
 
 		<div class="first-section footer" style="padding-top: 0px !important;margin-top: -10px !important">
 			<ion-row align-items-center="" class="row">
-				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
+				<ion-col class="col" col-12="" col-lg-3="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;" style="margin-bottom: 0px;">RESTAURANT</h2>
-						<br>
-						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Opening Hours: 8:00 - 23:30</p>
-						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
+						<h2 class="headFont;" style="margin-bottom: 0px;"><strong>BUSINESS HOURS</strong></h2>
+						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
+						<p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
+						<p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
+						<p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
 
 					</div>
 				</ion-col>
 				<ion-col class="col" col-12="" col-lg-6="" text-center="">
-					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;" style="margin-bottom: 0px;">EVENT CATERING</h2>
-						<br>
-						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
-						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
+					<div class="container contactUs" style="text-align: center">
+						<img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
+						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="map" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205</p>
+						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745</p>
+						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433">infoname@gmail.com</span></p>
+					</div>
+					
+				</ion-col>
+				<ion-col class="col" col-12="" col-lg-3="" text-center="">
+					<div class="container contactUs" style="text-align: left;">
+						<h2 class="headFont;" style="margin-bottom: 0px;"><strong>SUBSCRIBE NOW</strong></h2>
+						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
+						<p style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest food items and our new events. This theme will help you organize your site without any technical skills.</p>
 
 					</div>
 					
