--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -195,6 +195,16 @@
 				</ion-col>
 			</ion-row>
 		</div>
+
+		<div class="last-section" style="padding-top: 0px !important;">
+			<ion-row align-items-center="" class="row">
+				<ion-col class="col" col-12="" col-lg-4="" class="text-menu">
+					<div class="container" style="text-align: left">
+						<p style="font-size: 1.5rem;margin:0px;margin-left: 15px;">© 2019 All Rights Reserved</p>
+						</div>
+				</ion-col>
+			</ion-row>
+		</div>
 		
 	</div>
 </ion-content>
