--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -36,9 +36,11 @@
 					<ion-icon name="ios-pin-outline" color="goldenBrown">
 
 					</ion-icon>
-					<div class="texts">
-						<h2>Address</h2>
-						<h3>Ristora Restaurant, 103, NY 254</h3>
+					<div class="texts" >
+						<h2 style="margin-bottom: 5px !important;">Address</h2>
+						<h3 style="line-height: 1.2 !important;">4157 Eagle Rock Blvd
+						Ste 1
+						Los Angeles, CA 90065 Glassell Park</h3>
 					</div>
 				</div>
 				<div class="contactContent">
@@ -70,8 +72,9 @@
 			<h2 class="mainTexts headFont">RESTAURANT</h2>
 			<hr>
 			<div class="subTexts">
-				<p>Opening Hours: 10:00am - 10:00pm.</p>
-				<p>Booking Call: (323) 229-0228</p>
+				<p><span>Opening Hours:</span> 10:00am</p>
+				<p><span>Closing Hours:</span> Monday - Saturday (10:00pm), Sunday (04:00pm)</p>
+				<p><span>Booking Call:</span> (323) 229-0228</p>
 			</div>
 		</div>
 	</ion-row>
@@ -80,8 +83,8 @@
 			<h2 class="mainTexts headFont">EVENT CATERING</h2>
 			<hr>
 			<div class="subTexts">
-				<p><span>Monday - Thursday:</span> 10:00am - 10:00pm</p>
-				<p><span>Friday - Saturday:</span> 10:00am - 10:00pm</p>
+				<p><span>Monday - Saturday:</span> 10:00am - 10:00pm</p>
+				<!-- <p><span>Friday - :</span> 10:00am - 10:00pm</p> -->
 				<p><span>Sunday:</span> 10:00am - 04:00pm.</p>
 				<p><span>Booking Time:</span> 24/7 Hours</p>
 			</div>
