Auto stash before revert of "Design About us Page"

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -176,7 +176,7 @@
 						<img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
 						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="map" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205</p>
 						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745</p>
-						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433">infoname@gmail.com</span></p>
+						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> infoname@gmail.com</span></p>
 					</div>
 					
 				</ion-col>
@@ -186,7 +186,14 @@
 						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
 						<p style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest food items and our new events. This theme will help you organize your site without any technical skills.</p>
 
+						 <div class="inputSection">
+          <input type="text" placeholder="Email Address">
+          <button>SIGN UP</button>
+        </div>
+
+
 					</div>
+
 					
 				</ion-col>
 			</ion-row>
