--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -195,6 +195,7 @@ We wanted our fellow Filipino immigrants in Los Angeles to experience authentic 
         </ion-slides>
       </div>
     
+    </ion-row>
     <div class="first-section2 space">
     <ion-row no-padding>
       <ion-col col-lg-6 col-xl-6>
@@ -224,7 +225,7 @@ We wanted our fellow Filipino immigrants in Los Angeles to experience authentic 
 
   </div>
 
-  <div class="first-section footer" style="padding-top: 0px !important;margin-top: -10px !important" *ngIf="!checkApp">
+  <div class="first-section footer" style="padding-top: 0px !important;margin-top: -10px !important">
       <ion-row align-items-center="" class="row">
         <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
           <div class="container contactUs" style="text-align: left">
@@ -262,7 +263,7 @@ We wanted our fellow Filipino immigrants in Los Angeles to experience authentic 
       </ion-row>
     </div>
 
-    <div class="last-section" style="padding-top: 0px !important;" *ngIf="!checkApp">
+    <div class="last-section" style="padding-top: 0px !important;">
       <ion-row align-items-center="" class="row">
         <ion-col class="col" col-12="" col-lg-4="" class="text-menu">
           <div class="container" style="text-align: left">
