--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -59,7 +59,7 @@
 			<!-- </div> -->
 		</div>
 		
-		<div class="first-section" style="padding-top: 0px !important">
+		<div class="map" style="padding-top: 0px !important">
 			<ion-row align-items-center="" class="row">
 				<!-- <ion-col class="col" col-12="" col-lg-6="" push-lg-6="" class="text-menu">
 					<div class="container" style="text-align: center">
@@ -78,7 +78,7 @@
 							</ul>
 					</div>
 				</ion-col> -->
-				<ion-col class="col" col-12="" col-lg-12="" text-center="">
+				<ion-col class="col map-col" col-12="" col-lg-12="" text-center="">
 					<div class="mapContainer" style="height:500px;">
 						<div #map id="map"></div>
 					</div>
@@ -86,41 +86,41 @@
 			</ion-row>
 		</div>
 	
-	<div class="first-section" style="padding-top: 0px !important;padding-bottom: 0px !important">
+	<div class="first-section" style="padding-top: 5vw !important;padding-bottom: 0px !important">
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;">CONTACT INFO</h2>
+						<h2 class="headFont">CONTACT INFO</h2>
 						<br>
 						<ion-row>
-						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;">
+						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
 							<ion-icon class="icon" color="goldenBrown" name="map"></ion-icon>
 						</ion-col>
 						<ion-col>
-							<p style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Address</p>
-							<p style="font-size: 1.5rem;margin-top: 7px">4157 Eagle Rock Blvd
+							<p class="headFont" style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Address</p>
+							<p class="headFont" style="font-size: 1.5rem;margin-top: 7px">4157 Eagle Rock Blvd
 							Ste 1
 							Los Angeles, CA 90065</p>
 						</ion-col>
 					</ion-row>
 
 					<ion-row>
-						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;">
+						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
 							<ion-icon class="icon" color="goldenBrown" name="call"></ion-icon>
 						</ion-col>
 						<ion-col>
-							<p style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Phone Number</p>
-							<p style="font-size: 1.5rem;margin-top: 7px">(323) 229-0228</p>
+							<p class="headFont" style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Phone Number</p>
+							<p class="headFont" style="font-size: 1.5rem;margin-top: 7px">(323) 229-0228</p>
 						</ion-col>
 					</ion-row>
 
 					<ion-row>
-						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;">
+						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
 							<ion-icon class="icon" color="goldenBrown" name="mail"></ion-icon>
 						</ion-col>
 						<ion-col>
-							<p style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Email Address</p>
-							<p style="font-size: 1.5rem;margin-top: 7px">infoname@gmail.com</p>
+							<p class="headFont" style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Email Address</p>
+							<p class="headFont" style="font-size: 1.5rem;margin-top: 7px">infoname@gmail.com</p>
 						</ion-col>
 					</ion-row>
 
@@ -139,19 +139,19 @@
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;" style="margin-bottom: 0px;">RESTAURANT</h2>
+						<h2 class="headFont" style="margin-bottom: 0px;">RESTAURANT</h2>
 						<br>
-						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
-						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
 
 					</div>
 				</ion-col>
 				<ion-col class="col" col-12="" col-lg-6="" text-center="">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;" style="margin-bottom: 0px;">EVENT CATERING</h2>
+						<h2 class="headFont" style="margin-bottom: 0px;">EVENT CATERING</h2>
 						<br>
-						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
-						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
 
 					</div>
 					
@@ -165,9 +165,9 @@
 					<div class="container contactUs" style="text-align: left">
 						<h2 class="headFont;" style="margin-bottom: 0px;"><strong>BUSINESS HOURS</strong></h2>
 						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
-						<p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
-						<p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
-						<p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
 
 					</div>
 				</ion-col>
