--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -90,7 +90,7 @@
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont">CONTACT INFO</h2>
+						<h1 class="Kusina" style="margin-left:50px;">CONTACT INFO</h1>
 						<br>
 						<ion-row>
 						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
