--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -73,7 +73,7 @@
 <!---->
 <div style="flex-wrap: inherit; width: 100%;padding:0" class="cover2" >
             <!-- <div class="welcome"> -->
-                <p class="title" style="color: #ffffff !important;font-size:4vw !important;padding-top:100px !important;"> Menu gallery</p>
+                <p class="title headFont" style="color: #ffffff !important;font-size:4vw !important;padding-top:100px !important;"> Menu Gallery</p>
             <!-- </div> -->
         </div>
 
@@ -141,9 +141,9 @@
                             <h4 style="font-size: 1vw !important;">Monday - Saturday: 10:00am - 10:00pm</h4>
                             <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
                         </div>
-                        <button ion-button class="menu-button" (click)="callNow()">
+                       <!--  <button ion-button class="menu-button" (click)="callNow()">
           <h2>CONTACT US</h2>
-        </button>
+        </button> -->
                     </div>
                 </ion-col>
                 
@@ -154,7 +154,7 @@
             <ion-row align-items-center="" class="row">
                 <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
                     <div class="container contactUs" style="text-align: left">
-                        <h2 class="headFont" style="margin-bottom: 0px;"><strong>BUSINESS HOURS</strong></h2>
+                        <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
                         <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
@@ -165,15 +165,15 @@
                 <ion-col class="col" col-12="" col-lg-6="" text-center="">
                     <div class="container contactUs" style="text-align: center">
                         <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
-                        <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="map" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205</p>
+                        <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205</p>
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745</p>
-                        <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> infoname@gmail.com</span></p>
+                        <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> infoname@gmail.com</span></p>
                     </div>
                     
                 </ion-col>
                 <ion-col class="col" col-12="" col-lg-3="" text-center="">
                     <div class="container contactUs" style="text-align: left;">
-                        <h2 class="headFont" style="margin-bottom: 0px;"><strong>SUBSCRIBE NOW</strong></h2>
+                        <h2 class="headFont" style="margin-bottom: 0px;">SUBSCRIBE NOW</h2>
                         <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest food items and our new events. This theme will help you organize your site without any technical skills.</p>
 
@@ -188,7 +188,7 @@
                 </ion-col>
             </ion-row>
         </div>
-        <div class="last-section" >
+       <div class="last-section" >
             <ion-row align-items-center="" class="row">
                 <ion-col class="col" col-12="" col-lg-4="" class="text-menu">
                     <div class="container" style="text-align: left">
