--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -55,7 +55,7 @@
 	<div *ngIf="!checkApp" >
 		<div style="flex-wrap: inherit; width: 100%;padding:0" class="cover2" >
 			<!-- <div class="welcome"> -->
-				<p class="title" style="color: #ffffff !important;font-size:4vw !important;padding-top:100px !important;"> Contact Us</p>
+				<p class="title headFont" style="color: #ffffff !important;font-size:4vw !important;padding-top:100px !important;"> Contact Us</p>
 			<!-- </div> -->
 		</div>
 		
@@ -93,8 +93,8 @@
 						<h1 class="Kusina" style="margin-left:50px;">CONTACT INFO</h1>
 						<br>
 						<ion-row>
-						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
-							<ion-icon class="icon" color="goldenBrown" name="map"></ion-icon>
+						<ion-col col-2="" style="margin:0;width:10px;text-align:center">
+							<ion-icon class="icon" color="goldenBrown" name="pin"></ion-icon>
 						</ion-col>
 						<ion-col>
 							<p class="headFont" style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Address</p>
@@ -105,8 +105,8 @@
 					</ion-row>
 
 					<ion-row>
-						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
-							<ion-icon class="icon" color="goldenBrown" name="call"></ion-icon>
+						<ion-col col-2="" style="margin:0;width:10px;text-align:center">
+							<ion-icon class="icon" color="goldenBrown" name="phone-portrait"></ion-icon>
 						</ion-col>
 						<ion-col>
 							<p class="headFont" style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Phone Number</p>
@@ -115,7 +115,7 @@
 					</ion-row>
 
 					<ion-row>
-						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;text-align:right">
+						<ion-col col-2="" style="margin:0;width:10px;text-align:center;">
 							<ion-icon class="icon" color="goldenBrown" name="mail"></ion-icon>
 						</ion-col>
 						<ion-col>
@@ -163,7 +163,7 @@
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-3="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;" style="margin-bottom: 0px;"><strong>BUSINESS HOURS</strong></h2>
+						<h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
 						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
@@ -174,17 +174,17 @@
 				<ion-col class="col" col-12="" col-lg-6="" text-center="">
 					<div class="container contactUs" style="text-align: center">
 						<img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
-						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="map" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205</p>
-						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745</p>
-						<p style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> infoname@gmail.com</span></p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433"> infoname@gmail.com</span></p>
 					</div>
 					
 				</ion-col>
 				<ion-col class="col" col-12="" col-lg-3="" text-center="">
 					<div class="container contactUs" style="text-align: left;">
-						<h2 class="headFont;" style="margin-bottom: 0px;"><strong>SUBSCRIBE NOW</strong></h2>
+						<h2 class="headFont" style="margin-bottom: 0px;">SUBSCRIBE NOW</h2>
 						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
-						<p style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest food items and our new events. This theme will help you organize your site without any technical skills.</p>
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest food items and our new events. This theme will help you organize your site without any technical skills.</p>
 
 						 <div class="inputSection">
           <input type="text" placeholder="Email Address">
