--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -87,7 +87,7 @@
         </div>
     </div>
 </ion-row>
-<ion-grid  text-center  *ngIf="itemContent.length !== 0">
+<ion-grid fixed text-center  *ngIf="itemContent.length !== 0">
     <ion-row class="deskCardHolder">
         <ion-col no-margin no-padding col-6 *ngFor="let item of itemContent" class="deskCards">
             <ion-card>
