--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -150,13 +150,13 @@
 		<div class="first-section footer" style="padding-top: 0px !important;margin-top: -10px !important">
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-3="" class="text-menu">
-					<div class="container contactUs" style="text-align: left">
+					<div class="container contactUs" style="text-align: left;">
 						<h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
 						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
-
+						<p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
 					</div>
 				</ion-col>
 				<ion-col class="col" col-12="" col-lg-6="" text-center="">
@@ -188,15 +188,17 @@
 		</div>
 	</ion-grid>
 
-		<div class="last-section" style="padding-top: 0px !important;">
+	<ion-grid>
+		<div class="last-section">
 			<ion-row align-items-center="" class="row">
-				<ion-col class="col" col-12="" col-lg-4="" class="text-menu">
+				<ion-col class="col" col-12="" col-lg-4="" >
 					<div class="container" style="text-align: left">
 						<p style="font-size: 1.5rem;margin:0px;margin-left: 15px;">© 2019 All Rights Reserved</p>
 						</div>
 				</ion-col>
 			</ion-row>
 		</div>
+	</ion-grid>
 		
 	</div>
 </ion-content>
