--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -136,7 +136,7 @@
                             <h4 style="font-size: 1vw !important;">Monday - Saturday: 10:00am - 10:00pm</h4>
                             <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
                         </div>
-                        <button ion-button class="contact-button" (click)="callNow()">
+                        <button ion-button class="contact-button" (click)="goToContactUs()">
           <h2>CONTACT US</h2>
         </button>
                     </div>
@@ -150,12 +150,13 @@
         <div class="first-section footer" style="padding-top: 0px !important;">
             <ion-row align-items-center="" class="row">
                 <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
-                    <div class="container contactUs" style="text-align: left">
+                    <div class="container contactUs" style="text-align: left;">
                         <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
                         <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM - 10PM</p>
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM - 11:30PM</p>
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
+                         <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
                     </div>
                 </ion-col>
                 <ion-col class="col" col-12="" col-lg-6="" text-center="">
@@ -181,7 +182,7 @@
             </ion-row>
         </div>
     </ion-grid>
-    
+
     <ion-grid>
        <div class="last-section" >
             <ion-row align-items-center="" class="row">
