--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -48,7 +48,7 @@
     </ion-row>
     <ion-row no-padding>
         <div class="contentSections timeSched">
-            <h2 class="title curvyFont welcomeText goldenText">Business Hours</h2>
+            <h2 class="title curvyFont welcomeText goldenText" style="font-family: 'Cookie Curvy' !important;">Business Hours</h2>
             <h2 class="mainTexts headFont">OPEN FOR SPECIAL OCASIONS</h2>
             <div class="alarmIcon">
                 <ion-icon name="alarm" class="goldenText"></ion-icon>
@@ -91,14 +91,14 @@
                 <div class="container contactUs" style="text-align: center">
                     <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
                     <p style="font-size: 1.5rem;margin-top: 0px;">
-                        <ion-icon name="map" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY,
+                        <ion-icon name="map" color="charcoal" style="font-size:1.5em; margin-right: 10px"></ion-icon>503 Old Buffalo Street NY,
                         205
                     </p>
                     <p style="font-size: 1.5rem;margin-top: 0px;">
-                        <ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745
+                        <ion-icon name="call" color="charcoal" style="font-size:1.5em; margin-right: 12px"></ion-icon>(+088) 589-8745
                     </p>
                     <p style="font-size: 1.5rem;margin-top: 0px;">
-                        <ion-icon name="mail" color="charcoal" style="font-size:1.5em"></ion-icon><span
+                        <ion-icon name="mail" color="charcoal" style="font-size:1.5em; margin-right: 10px"></ion-icon><span
                             style="color:#C49433">
                             infoname@gmail.com</span>
                     </p>
