--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -190,14 +190,14 @@
   <ion-row no-padding>
    
     <ion-col col-lg-6 col-xl-6 style="padding: 0px 30px 0px 80px">
-       <div class="setImage">
+       <div class="aboutImage">
          <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service A</h2>
          <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
     </ion-col>
 
     <ion-col col-lg-6 col-xl-6 style="padding: 0px 80px 0px 10px">
-      <div class="setImage">
+      <div class="aboutImage">
          <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service B</h2>
          <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>       
@@ -227,7 +227,7 @@
           <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
         </div>
         <button ion-button class="menu-button" (click)="goToContactUs()">
-          <h2>CONTACT US</h2>
+          <h2 class="headFont">CONTACT US</h2>
         </button>
       </div>
       </ion-col>
