--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -137,7 +137,7 @@
                             <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
                         </div>
                         <button ion-button class="contact-button" (click)="goToContactUs()">
-          <h2>CONTACT US</h2>
+          <h2 class="headFont">CONTACT US</h2>
         </button>
                     </div>
                 </ion-col>
