--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -211,7 +211,7 @@ We wanted our fellow Filipino immigrants in Los Angeles to experience authentic 
           <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
         </div>
         <button ion-button class="menu-button" (click)="goToContactUs()">
-          <h2>CONTACT US</h2>
+          <h2 class="headFont">CONTACT US</h2>
         </button>
       </div>
       </ion-col>
